--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -213,18 +213,18 @@ which seems incompatible with the notion of prior ignorance about $\vartheta$.
 Furthermore, in the literature there are several, often mutually incompatible, approaches to construct non-informative priors,
 such as Laplace's prior, Jeffreys' prior, or reference priors \parencite[see, e.g.,][\S 5.6.2]{2000:bernardosmith}.
 Most of these precise priors seem to convey mainly a state of indifference instead of ignorance \parencite[p.~271]{1999:rueger}.%
-\footnote{\label{footnote:symm}
-E.g., in the designation of the uniform prior as a non-informative prior by the principle of insufficient reason
-(i.e., taking Laplace's prior),
+\footnote{\label{footnote:symm}E.g., in the designation of the uniform prior
+as a non-informative prior by the principle of insufficient reason (i.e., taking Laplace's prior),
 it is argued that there is no reason to favor one parameter value over another,
 and thus, all of them should get the same probability resp.\ density value.
 For analysts restricting themselves to precise priors, this argument leads necessarily to the uniform prior.
-When considering imprecise priors, however, the principle of insufficient reason does not uniquely determine a certain precise prior.
+When considering imprecise priors, however, the principle of insufficient reason does not uniquely determine a certain prior.
 It only states that the probability resp.\ density \emph{interval} should be equal for all parameter values,
 but that interval may be any interval $\subseteq [0,1]$.
-We may thus realize that the principle of insufficient reason actually implies \emph{indifference} between parameter values only,
+We may thus realise that the principle of insufficient reason actually implies \emph{indifference} between parameter values only,
 and that other considerations are needed to distinguish a certain imprecise prior as (nearly) non-informative;
-usually, it is postulated that (a certain class of) inferences based on the prior should be (nearly) vacuous,
+usually, it is postulated that (a certain class of) inferences based on the prior should be (nearly) vacuous
+\parencite[see, e.g.,][]{2012:benavolizaffalon},
 and specific information (e.g., symmetry of parameter values) would be needed to reduce the size of the prior credal set.
 See, in particular, \textcite[\S 4.3]{2001:weichselberger} formulating two symmetry principles
 extending the principle of insufficient reason,
@@ -241,7 +241,8 @@ so-called \emph{near-ignorance priors} are used to model the state of prior igno
 When, in contrast, there is substantial prior information available,
 the challenge is to model this information adequately in the prior,
 while ensuring easy handling and prior-data conflict sensitivity.%
-\footnote{In situations when data is revealed to the analyst sequentially in distinct batches,
+\footnote{\label{foot:sequential}As another possible modelling aim,
+in situations when data is revealed to the analyst sequentially in distinct batches,
 it might also be useful if the model is able to resonate unusual patterns or extreme differences between the batches.
 This actually effects to doubting the i.i.d.\ assumptions on which these models are founded.
 This could be useful in the area of \emph{statistical surveillance},
@@ -304,8 +305,8 @@ whether one considers the categorization $\{$red, other$\}$ or $\{$red, blue, ot
 The usefulness of the RIP has been controversially discussed \parencite[see, e.g., the discussion to][]{1996:walley::idm},
 and alternative imprecise probability models that do not rely on it have been developed.%
 \footnote{See, e.g., Coolen and Augustin \parencite*{2005:Coolen:Augustin, 2009:Coolen:Augustin}
-***and the brief discussion at the end of Section ***{NonparametricPredictive-Inference-Overview}***
-for an alternative based on the NPI approach.}
+for an alternative based on the NPI approach (see footnote~\ref{foot:npi}, page~\pageref{foot:npi}).
+Important differences between this model and the IDM are also briefly discussed at the end of \textcite[\S 6.1]{itip-statinf}.}
 
 %The IDM can be shown to lead to $\infty$-monotone lower probabilities \parencite[see, e.g.,][\S 5]{itip-special},
 %and its credal set is already completely determined by the lower and upper probabilities of the singletons,
