diss: ip critique

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -606,6 +606,27 @@
   pages = {741--761}
 }
 
+@book{1987:box,
+    Address = {New York},
+    Author = {Box, G. and Draper, N.},
+    Isbn = {0-471-81033-9},
+    Publisher = {Wiley},
+    Title = {Empirical Model-building and Response Surface},
+    Year = {1987}}
+
+@book{1981:huber,
+    Address = {New York},
+    Author = {Huber, P.},
+    Publisher = {Wiley},
+    Title = {Robust Statistics},
+    Year = {1981}}
+
+@book{1986:hampel,
+    Address = {New York},
+    Author = {Hampel, F. and Ronchetti, E. and Rousseeuw, P. and Stahel, W.},
+    Publisher = {Wiley},
+    Title = {Robust Statistics: The Approach Based on Influence Functions},
+    Year = {1986}}
 
 
 @incollection{itip-desirable,
